<resources>
    <string name="app_name">HuntyCinema</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="reset_password_link"><u><i>forgot your password?</i></u></string>
    <string name="register_link"><u><i>create an account</i></u></string>
    <string name="login_link"><u><i>already have an account?</i></u></string>
    <string name="revoke_card"><u><i>revoke card</i></u></string>
    <string name="empty_field">This field can not be empty</string>
    <string name="username_does_not_exist">user does not exist </string>
    <string name="wrong_password">wrong password</string>
    <string name="invalida_mail_adress">invalid email</string>
    <string name="new_password">new password</string>
    <string name="confirmation_code">confirmation code</string>

</resources>