<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:background="@color/main_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password_title"
        android:text="Reset Password"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginTop="100sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:id="@+id/reset_password_et"
        android:scrollHorizontally="true"
        android:maxLines="1"
        android:hint="@string/new_password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginLeft="32sp"
        android:layout_marginRight="32sp"
        android:layout_marginTop="164sp"
        android:drawableLeft="@drawable/password_field"
        android:background="@drawable/full_rounded_view"
        app:layout_constraintTop_toBottomOf="@id/reset_password_title"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hide_password_reset_password"
        android:src="@drawable/hide_password"
        android:background="@color/main_clor_transparent"
        app:layout_constraintTop_toTopOf="@id/reset_password_et"
        app:layout_constraintBottom_toBottomOf="@id/reset_password_et"
        app:layout_constraintEnd_toEndOf="@id/reset_password_et"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password_validator"
        android:visibility="invisible"
        android:textColor="@color/error_mes"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/empty_field"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et"
        app:layout_constraintLeft_toLeftOf="@id/reset_password_et"
        app:layout_constraintRight_toRightOf="@id/reset_password_et"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:id="@+id/confirm_code"
        android:scrollHorizontally="true"
        android:maxLines="1"
        android:hint="@string/confirmation_code"
        android:textSize="20sp"
        android:inputType="number"
        android:layout_marginLeft="32sp"
        android:layout_marginRight="32sp"
        android:layout_marginTop="75sp"
        android:background="@drawable/full_rounded_view"
        app:layout_constraintTop_toBottomOf="@id/reset_password_et"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_code_validator"
        android:visibility="invisible"
        android:textColor="@color/error_mes"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/empty_field"
        android:layout_marginTop="5sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_code"
        app:layout_constraintLeft_toLeftOf="@id/confirm_code"
        app:layout_constraintRight_toRightOf="@id/confirm_code"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password_btn"
        android:background="@drawable/full_rounded_view"
        android:text="Reset"
        android:textSize="16sp"
        android:enabled="false"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_code"
        app:layout_constraintLeft_toLeftOf="@id/confirm_code"
        app:layout_constraintRight_toRightOf="@id/confirm_code"/>




</androidx.constraintlayout.widget.ConstraintLayout>